Add and sub functionality added to amount dialog.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="amount">Amount</string>
     <string name="share_upi">Share UPI</string>
     <string name="subtract">Subtract</string>
+
+    <string name="share_on_wa">Share on whatsapp!!</string>
+    <string name="share">Share</string>
 </resources>
